gateway-api-load-balancer/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ingress-gateway
  namespace: ingress-gateway
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
  hostnames:
  - '*.mesh.example.com'
  rules:
  - backendRefs:
    - name: asm-ingressgateway
      port: 443
